<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/exoplayer_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exoplayer_height_phone_portrait" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:layout_below="@id/exoplayer_view">

            <TextView
                android:id="@+id/text_view_title"
                android:textSize="@dimen/text_large"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>