...

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_view"
                android:layout_below="@id/linear_layout_information"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_default_margin"
                android:padding="@dimen/zero"
...
